--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ install:
   - pip install ansible==1.5.0
 script:
   - echo localhost > inventory
-  - mkdir -f /home/travis/build/mtpereira/ansible-harp/roles/
+  - mkdir -p /home/travis/build/mtpereira/ansible-harp/roles/
   - ansible-galaxy install --ignore-errors -p /home/travis/build/mtpereira/ansible-harp/roles/ Ansibles.nodejs
   - ansible-galaxy install --ignore-errors -p /home/travis/build/mtpereira/ansible-harp/roles/ Ansibles.build-essential
   - ansible-playbook --syntax-check -i inventory harp.yml
