--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,6 @@ install:
   - pip install ansible==1.5.0
 script:
   - echo localhost > inventory
-  - mkdir -p /home/travis/build/mtpereira/ansible-harp/roles/
-  - ansible-galaxy install --ignore-errors -p /home/travis/build/mtpereira/ansible-harp/roles/ Ansibles.build-essential
-  - git clone https://github.com/mtpereira/nodejs.git /home/travis/build/mtpereira/ansible-harp/roles/ansible-nodejs
+  - ansible-galaxy install --ignore-errors Ansibles.build-essential Ansibles.nodejs
   - ansible-playbook --syntax-check -i inventory harp.yml
   - ansible-playbook -i inventory harp.yml --connection=local --sudo
