--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ install:
   - pip install ansible==1.5.0
 script:
   - echo localhost > inventory
-  - ansible-galaxy install --ignore-errors Ansibles.build-essential Ansibles.nodejs
+  - mkdir -p /home/travis/build/mtpereira/ansible-harp/roles/
+  - ansible-galaxy install --ignore-errors -p /home/travis/build/mtpereira/ansible-harp/roles/ Ansibles.build-essential Ansibles.nodejs
   - ansible-playbook --syntax-check -i inventory harp.yml
   - ansible-playbook -i inventory harp.yml --connection=local --sudo
