--- a/tasks/build.yml
+++ b/tasks/build.yml
@@ -14,6 +14,12 @@
   sudo: no
   when: harp_build_source_type == 'git'
 
+- name: build - remove .git dir
+  file: dest={{ harp_build_sources_path }}/{{ harp_build_site_name }}/.git
+        state=absent
+  sudo: no
+  when: harp_build_source_type == 'git'
+
 - name: build - fetch app source from tarball
   unarchive: src={{ harp_build_tar_file }}
              dest={{ harp_build_sources_path }}
