--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,10 @@ before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq python-apt python-pycurl
 install:
-  - pip install ansible==1.5.0
+  - pip install ansible==1.8.2
 script:
   - echo localhost > inventory
   - mkdir -p /home/travis/build/mtpereira/ansible-harp/roles/
-  - ansible-galaxy install --ignore-errors -p /home/travis/build/mtpereira/ansible-harp/roles/ Ansibles.build-essential Ansibles.nodejs
+  - ansible-galaxy install --ignore-errors -p /home/travis/build/mtpereira/ansible-harp/roles/ nodesource.node
   - ansible-playbook --syntax-check -i inventory harp.yml
   - ansible-playbook -i inventory harp.yml --connection=local --sudo
