--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -3,3 +3,6 @@ harp_build_git_repo_branch: 'master'
 harp_build_source_type: 'git'
 harp_build_sources_path: /tmp/harp_sources
 harp_build_output_path: /tmp/harp_output
+
+harp_install_state: "present"
+
